NewLifeUtils 5.1.8:
    - Addition:  CSM -------    invalid_usage translation
    - Addition:  UM  -------    hex_to_rgb function
    - Change:    BAT -------    full Yaml support and dot notation
    - Change:    CSM -------    For command use decorators
    - Change:    LM  -------    lambda to function
    - Change:    UM  -------    safe_format more abilities
    - Fix:       SUM -------    parse_args fix
    - Removal:   OTH -------    Removed env

NewLifeUtils 5.1.7:
    - Addition:  CSM -------    added insert_print()
    - Addition:  CSM -------    added threading
    - Addition:  CSM -------    code from main to check_params
    - Addition:  LM  -------    get_read_formatting()
    - Addition:  UM  -------    safe_format
    - Change:    CSM -------    Resorted config
    - Change:    CSM -------    Rewrite registrations
    - Change:    CSM -------    main() -> run()
    - Change:    LM  -------    default log name
    - Change:    LM  -------    print -> sys.stdout.write
    - Change:    OTH -------    changelog rewrite
    - Fix:       CSM -------    name changed from camelCase
    - Fix:       EM  -------    invalid prints
    - Fix:       LM  -------    completer commented

NewLifeUtils 5.1.6:
    - Change:    UM  -------    parse_args regex change
    - Fix:       BAT -------    batch install global option
    - Fix:       LM  -------    cstm fix
    - Fix:       LM  -------    rea() print up
    - Removal:   BAT -------    batch uninstall global option

NewLifeUtils 5.1.5:
    - Fix:       LM  -------    rea() not working

NewLifeUtils 5.1.4:
    - Fix:       CSM -------    Shell() not working
    - Fix:       LM  -------    rea() not working
    - Removal:   CSM -------    removed {} from start eveny
    - Removal:   LM  -------    logger smart input future disabled

NewLifeUtils 5.1.3:
    - Addition:  OTH c5c7247    CHANGELOG
    - Addition:  RM  8778255    RequestModule
    - Addition:  STP 1a2415d    requirements in setup.py