@@ -1,0 +1,16 @@
+{}
+
+[19:04:22] [L] My Cmd  : Welcome to My CMD
+[19:04:24] [R] My Cmd  : 123
+[19:04:24] [W] My Cmd  : Unknown Command, type "help"
+[19:04:25] [R] My Cmd  : s
+[19:04:25] [W] My Cmd  : Unknown Command, type "help"
+[19:04:25] [R] My Cmd  : d
+[19:04:25] [W] My Cmd  : Unknown Command, type "help"
+[19:04:25] [R] My Cmd  : sadf
+[19:04:25] [W] My Cmd  : Unknown Command, type "help"
+[19:04:25] [R] My Cmd  : a
+[19:04:25] [W] My Cmd  : Unknown Command, type "help"
+[19:04:25] [R] My Cmd  : sdf
+[19:04:25] [W] My Cmd  : Unknown Command, type "help"
+[19:04:26] [R] My Cmd  : 
